src/test/resources/sdp/examples/should-fail/bad-data/originator/bad-args/toofew.sdp
v=0
o=asdasdasdasd
s=my session
